# horrible-cpp-utils

./: .gitignore  CMakeLists.txt  README.md
cmake/: addtest.cmake
include/HorribleUtils/: horrible_type_traits.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt
